# ai-project-crewai

./: .gitignore  README.md  pyproject.toml  report.md
src/crew_ai/: crew.py  main.py  test.py
