[project]
name = "crew_ai"
version = "0.1.0"
description = "Generate Test Cases and Automation with crewAI"
authors = [{ name = "Your Name", email = "irwan.rosyadi12@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "fastapi",
    "LiteLLM",
    "apscheduler",
    "pydantic[email]",
    "email_validator",
    "fastapi_sso"
]

[project.scripts]
crew_ai = "crew_ai.main:run"
run_crew = "crew_ai.main:run"
train = "crew_ai.main:train"
replay = "crew_ai.main:replay"
test = "crew_ai.main:test"
run_with_trigger = "crew_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
